GLOBAL: ensure the scrollbar is computer in any page
Chromium-based browsers tend to not calculate the scrollbar when it
comes to the viewport, causing problems with width %age css rules,
and making the menu wiggle when switching from a short to a long page
and opposite.

Note that according to
https://developer.mozilla.org/en-US/docs/Web/CSS/scrollbar-gutter,
only recent browsers will benefit of it.

--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,10 @@
 	--table_padding: .25em .5em;
 }
 
+html {
+	scrollbar-gutter: stable;
+}
+
 body {
 	background: var(--background);
 	color: var(--foreground);
